# upm

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/database/: Cargo.toml
crates/core/database/src/: database.rs  helpers.rs  index.rs  lib.rs
crates/core/installer/: Cargo.toml
crates/core/installer/src/: helpers.rs  installer.rs  lib.rs
crates/core/package_ostree/: Cargo.toml
crates/core/package_ostree/src/: errors.rs  helpers.rs  implement.rs  lib.rs
crates/core/src/: backend.rs  lib.rs  lock.rs  mock.rs  types.rs
docs/: overview.md
examples/: all_sql_in_files.rs  auto_schema_init.rs  sql_files_pattern.rs
src/: errors.rs  lib.rs  lock.rs  types.rs
src/backup/: backup.rs  mod.rs
src/config/: mod.rs
src/database/: database.rs  mod.rs
src/installer/: installer.rs  mod.rs
temp folder/: enums.rs
temp folder/package/: manager.rs  operation.rs
upac/: Cargo.toml
upac-cli/: Cargo.toml  README.md
upac-cli/src/: app.rs  main.rs
upac-cli/src/commands/: mod.rs  package.rs  repo.rs
upac-core/: Cargo.toml
upac-core-lib/: Cargo.toml
upac-core-lib/src/: lib.rs
upac-core-lib/src/backup/: commit.rs  errors.rs  helpers.rs  implement.rs  info.rs  manager.rs  mod.rs  rollback.rs
upac-core-lib/src/config/: config.rs  files.rs  mod.rs
upac-core-lib/src/core/: backend.rs  helpers.rs  lock.rs  mod.rs  permitions.rs  types.rs
upac-core-lib/src/database/: database.rs  files.rs  help.rs  helpers.rs  index.rs  mod.rs
upac-core-lib/src/index/: index.rs  mod.rs  toml.rs
upac-core-lib/src/installer/: helpers.rs  implement.rs  installer.rs  mod.rs
upac-core/src/backup/: helpers.rs
upac-core/src/core/: mod.rs
upac-core/src/database/: database.rs
upac-core/src/installer/: helpers.rs  installer.rs  mod.rs
upac-lib/: Cargo.toml
upac-lib/src/: lib.rs  lock.rs
upac-lib/src/backup/: backup.rs  mod.rs
upac-lib/src/config/: config.rs  mod.rs
upac-lib/src/database/: database.rs  mod.rs
upac-lib/src/installer/: installer.rs  mod.rs
upac-types/: Cargo.toml
upac-types/src/: errors.rs  lib.rs  types.rs
upac/src/: lib.rs
upac/src/backup/: implement.rs
upac/src/core/: backend.rs  mock.rs  types.rs
upac/src/database/: index.rs  mod.rs
upac/src/installer/: events.rs  implement.rs  mod.rs
upm-backend-apt/: Cargo.toml
upm-backend-apt/src/: lib.rs
upm-core/: Cargo.toml
upm-core/examples/: basic_operations.rs
upm-core/src/: database.rs  errors.rs  lib.rs  manager.rs  mod.rs  operation.rs  package.rs  resolver.rs  threadcoordination.rs
upm-core/src/backend/: backend_trait.rs  loader.rs  mod.rs  registry.rs
upm-core/src/config/: config.rs  mod.rs
upm-core/src/core/: database.rs  manager.rs  mod.rs  threadcoordination.rs
upm-core/src/core/database/: connection.rs  mod.rs  packages.rs
upm-core/src/database/: connection.rs  index.rs  manager.rs  mod.rs  packages.rs  validation.rs
upm-core/src/dependency/: conflict.rs  graph.rs  mod.rs  priority.rs  resolver.rs  virtual_pkg.rs
upm-core/src/installer/: filesystem.rs  installer.rs  mod.rs  permissions.rs  scripts.rs
upm-core/src/lock/: manager.rs  mod.rs  types.rs
upm-core/src/macros/: mod.rs
upm-core/src/operations/: mod.rs  tracker.rs  types.rs
upm-core/src/ostree/: manager.rs  mod.rs
upm-core/src/package_manager/: cache.rs  config.rs  installer.rs  manage_operation.rs  mod.rs  operations.rs  snapshots.rs
upm-core/src/progress/: mod.rs  reporter.rs  types.rs
upm-core/src/recovery/: manager.rs  mod.rs
upm-core/src/repository/: cache.rs  config.rs  fetcher.rs  manager.rs  mod.rs  repository.rs
upm-core/src/sql/: schema.sql
upm-core/src/sql/queries/: add_package.sql  check_package_exists.sql  delete_package.sql  get_package_by_name.sql  get_package_status.sql  health_check.sql  update_package_description.sql  update_package_installed.sql  update_package_license.sql  update_package_name.sql  update_package_repository.sql  update_package_version.sql
upm-core/src/transaction/: manager.rs  mod.rs  step.rs  transaction.rs
upm-core/src/types/: database.rs  enums.rs  error.rs  errors.rs  file_entry.rs  metadata.rs  mod.rs  package.rs  scripts.rs  traits.rs
upm-core/src/types/error/: package.rs
upm-core/src/types/ostree/: snapthot.rs
upm-core/src/types/package/: package.rs
upm-core/src/utils/: mod.rs  paths.rs  process.rs  toml.rs
