[workspace]
members = [
    "upm-core"
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["JustPav"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = { version = "2.5", features = ["serde"] }
semver = "1.0"
version-compare = "0.2"
time = { version = "0.3", features = ["serde"] }
