[package]
name = "upac-core-lib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
nix = { version = "0.28", features = ["fs", "user"] }
serde = { version = "1.0", features = ["derive"] }
abi_stable = { version = "0.11" }
ostree = { version = "0.20" }
tempfile = "3.8"
regex = "1.12.3"
toml = "0.8"
