[package]
name = "upac-lib"
version = "0.1.0"
license = "MIT"
edition.workspace = true
rust-version.workspace = true
repository = "https://github.com/justpav05/upm"
authors = ["justpav05", "afeistel"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
upac-types = { path = "../upac-types" }
stabby = { workspace = true }
serde = { workspace = true }
nix = { version = "0.28", features = ["fs", "user"] }
time = { version = "0.3", features = ["formatting"] }
ostree = { version = "0.20", features = ["v2022_6"] }
toml = "0.8"
libc = "0.2"
