[package]
name = "upac-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
stabby = { workspace = true }
serde = { workspace = true }
toml = { version = "0.8", optional = true }
ostree = { version = "0.20", features = ["v2022_6"], optional = true }
nix = { version = "0.28", features = ["fs", "user"], optional = true }

[features]
nix-errors    = ["dep:nix"]
ostree-errors = ["dep:ostree"]
toml-errors   = ["dep:toml"]
