[package]
name = "upm-backend-apt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "upm_backend_apt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib для динамической загрузки, rlib для тестов

[dependencies]
upm-core = { path = "../upm-core" }
tokio = { workspace = true, features = ["process", "io-util"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json.workspace = true
log.workspace = true
regex = "1.10"
