[package]
name = "upm-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "upm_core"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "json",
    "chrono",
    "uuid",
    "macros"
] }
tokio = { workspace = true, features = ["full"] }
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.7"
serde = { workspace = true }
serde_json.workspace = true
serde_yaml = "0.9"
log.workspace = true
env_logger = "0.11"
anyhow.workspace = true
thiserror.workspace = true
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
libloading = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
libc = "0.2"
nix = { version = "0.29", features = ["user"] }

[dev-dependencies]
tokio-test = "0.4"
