[package]
name = "core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.28", features = ["fs"] }
