[package]
name = "installer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
core = { path = ".." }
database = { path = "../database" }
package_ostree = { path = "../package_ostree" }
nix = { version = "0.28", features = ["fs", "user"] }
tempfile = "3.8"
