[package]
name = "package_ostree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ostree = { version = "0.20", optional = true }
nix = { version = "0.28", features = ["fs", "user"] }
glib = "0.18"
gio = "0.18"
database = { path = "../database" }
core = { path = ".." }

[dev-dependencies]
tempfile = "3"

[features]
default = ["ostree-support"]
ostree-support = ["ostree"]
